--- a/TeamProject-main/subpage.html
+++ b/TeamProject-main/subpage.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>해피포인트</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>sub page</title>
 
-  <link rel="stylesheet" href="./css/style1.css">
-  <script src="./js/jquery-3.5.1.min.js"></script>
-  <script src="./js/main.js"></script>
+    <script src="./js/jquery-3.5.1.min.js"></script>
+    <script src="./js/subpage.js"></script>
+
+    <link rel="stylesheet" href="./css/style2.css">
+
 </head>
 <body>
 
+    
   <header id="main_header">
     <h1>
-      <a href="./"> 
+      <a href="./main.html"> 
         <img src="./images/happypointlogo.png" alt="해피포인트">
       </a>
     </h1>
@@ -39,43 +42,25 @@
     </button>
   </header>
 
+  
   <section id="main_visual">
     <div class="slider">
-      <img class="show" src="./images/main– 1@2x.jpg" alt="1">
-      <img src="./images/main – 2@2x.jpg" alt="2">
+      <img src="./images/sweets.png" alt="1">
+
     </div>
   </section>
 
-  <section id="service">
-    <ul>
-      <li>
-        <a href="#">
-          <img src="./images/notice.png" alt="공지사항">
-        </a>
-        <h3>공지사항</h3>
-      </li>
-      <li>
-        <a href="#">
-          <img src="./images/alliance.png" alt="제휴">
-        </a>
-        <h3>제휴</h3>
-      </li>
-      <li>
-        <a href="#">
-          <img src="./images/happyorder.png" alt="해피오더">
-        </a>
-        <h3>해피오더</h3>
-      </li>
-    </ul>
-  </section>
 
-  <section id="brand">
-    <h2>해피포인트 유튜브</h2>
-    <div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/nE_RrcVxPBA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-  </section>
 
+
+    
+
+
+
+
+
+
+  
   <footer id="main_footer">
     <div class="sns">
       <a href="#"><img src="./images/facebook.png" alt="facebook"></a>
