--- a/TeamProject-main/location.html
+++ b/TeamProject-main/location.html
@@ -17,7 +17,7 @@
     <header id="main_header">
         <h1>
           <a href="./main.html"> 
-            <img src="./images/happypointlogo.png" alt="해피포인트">
+            <img src="./images/logo.png" alt="해피포인트">
           </a>
         </h1>
         <!-- 메인메뉴 -->
@@ -35,10 +35,11 @@
             <li><a href="#">마이페이지</a></li>
             <li><a href="#">고객센터</a></li>
             <li><a href="./location.html">오시는길</a></li>
+            <li><a href="./location.html">브랜드 소개</a></li>
           </ul>
         </nav>
         <button class="btn_toggle">
-          <img src="./images/menu.jpg">
+          <img src="./images/menu.png">
         </button>
       </header>
 
@@ -50,7 +51,7 @@
             </div>
         </div>
         <div>
-            <img src="./images/map.png" alt="">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419.55459108442955!2d127.16849158838889!3d37.43581990121073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca8df5fb9ecbf%3A0x96aaada99b4e5e7c!2z6rK96riw64-EIOyEseuCqOyLnCDspJHsm5Dqtawg7IOB64yA7JuQMeuPmSDsgqzquLDrp4nqs6jroZwzMeuyiOq4uCAxOA!5e0!3m2!1sko!2skr!4v1612153197953!5m2!1sko!2skr" width="95%" height="550" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
       </section>
 
@@ -67,8 +68,8 @@
   <footer id="main_footer">
     <div class="sns">
       <a href="#"><img src="./images/facebook.png" alt="facebook"></a>
-      <a href="#"><img src="./images/insta.png" alt="instagram"></a>
-      <a href="#"><img src="./images/yt.png" alt="youtube"></a>
+      <a href="#"><img src="./images/instagram.png" alt="instagram"></a>
+      <a href="#"><img src="./images/youtube.png" alt="youtube"></a>
       <a href="#"><img src="./images/blog.png" alt="blog"></a>
     </div>
     <p class="tel">해피포인트 고객센터
