--- a/TeamProject-main/subpage.html
+++ b/TeamProject-main/subpage.html
@@ -17,14 +17,14 @@
   <header id="main_header">
     <h1>
       <a href="./main.html"> 
-        <img src="./images/happypointlogo.png" alt="해피포인트">
+        <img src="./images/logo.png" alt="해피포인트">
       </a>
     </h1>
     <!-- 메인메뉴 -->
     <nav id="gnb">
       <div>
         <button class="btn_close">
-          close
+          <i class="fa fa-times" aria-hidden="true"></i>
         </button>
       </div>
       <ul>
@@ -35,10 +35,11 @@
         <li><a href="#">마이페이지</a></li>
         <li><a href="#">고객센터</a></li>
         <li><a href="./location.html">오시는길</a></li>
+        <li><a href="./location.html">브랜드 소개</a></li>
       </ul>
     </nav>
     <button class="btn_toggle">
-      <img src="./images/menu.jpg">
+      <img src="./images/menu.png">
     </button>
   </header>
 
@@ -50,7 +51,7 @@
     </div>
   </section>
 
-
+  
 
 
     
@@ -64,8 +65,8 @@
   <footer id="main_footer">
     <div class="sns">
       <a href="#"><img src="./images/facebook.png" alt="facebook"></a>
-      <a href="#"><img src="./images/insta.png" alt="instagram"></a>
-      <a href="#"><img src="./images/yt.png" alt="youtube"></a>
+      <a href="#"><img src="./images/instagram.png" alt="instagram"></a>
+      <a href="#"><img src="./images/youtube.png" alt="youtube"></a>
       <a href="#"><img src="./images/blog.png" alt="blog"></a>
     </div>
     <p class="tel">해피포인트 고객센터
