--- a/TeamProject-main/index.html
+++ b/TeamProject-main/index.html
@@ -3,17 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>해피포인트</title>
-
-  <link rel="stylesheet" href="./css/style1.css">
+  <title>happy point</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./css/style.css">
   <script src="./js/jquery-3.5.1.min.js"></script>
-  <script src="./js/main0.js"></script>
+  <script src="./js/main.js"></script>
 </head>
 <body>
-
   <header id="main_header">
+    <button class="btn_toggle">
+        <img src="./images/menu.png">
+    </button>
     <h1>
-      <a href="./"> 
+      <a href="./index.html"> 
         <img src="./images/logo.png" alt="해피포인트">
       </a>
     </h1>
@@ -21,7 +25,7 @@
     <nav id="gnb">
       <div>
         <button class="btn_close">
-          <i class="fa fa-times" aria-hidden="true"></i>
+          <i class="fa fa-times fa-2x"aria-hidden="true"></i>
         </button>
       </div>
       <ul>
@@ -35,9 +39,6 @@
         <li><a href="./location.html">브랜드 소개</a></li>
       </ul>
     </nav>
-    <button class="btn_toggle">
-      <img src="./images/menu.png">
-    </button>
   </header>
 
   <section id="main_visual">
@@ -51,44 +52,67 @@
     <ul>
       <li>
         <a href="#">
-          <img src="./images/icon1.png" alt="공지사항">
+          <img src="./images/order.png" alt="해피오더">
         </a>
-        <h3>공지사항</h3>
+        <p>해피오더</p>
       </li>
       <li>
         <a href="#">
           <img src="./images/together.png" alt="제휴">
         </a>
-        <h3>제휴</h3>
+        <p>제휴</p>
       </li>
       <li>
         <a href="#">
-          <img src="./images/order.png" alt="해피오더">
+          <img src="./images/icon1.png" alt="공지사항">
         </a>
-        <h3>해피오더</h3>
+        <p>공지사항</p>
       </li>
     </ul>
   </section>
-
-  <section id="brand">
-    <h2>해피포인트 유튜브</h2>
+  <section id="event">
+    <img src="./images/event.png">
+    <h2>해피 이벤트</h2>
+  </section>
+  <section id="benefit">
+    <ul>
+      <li>
+        <a href="#">
+          <img src="./images/cake.png">
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img src="./images/lunch.png">
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img src="./images/qr.png">
+        </a>
+      </li>
+    </ul>
+    <h2>혜택 모음전</h2>
+  </section>
+  <section id="you">
+    <h2>Brand Movie</h2>
     <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/nE_RrcVxPBA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
-  </section>
-
+      </section>
   <footer id="main_footer">
     <div class="sns">
-      <a href="#"><img src="./images/facebook.png" alt="facebook"></a>
-      <a href="#"><img src="./images/instagram.png" alt="instagram"></a>
-      <a href="#"><img src="./images/youtube.png" alt="youtube"></a>
-      <a href="#"><img src="./images/blog.png" alt="blog"></a>
+      <a href="https://www.facebook.com/happypointcard"><img src="./images/facebook.png" alt="facebook"></a>
+      <a href="https://www.instagram.com/happypoint_official/"><img src="./images/instagram.png" alt="instagram"></a>
+      <a href="https://www.youtube.com/channel/UCjlghdluB8Ke5B7hUjENdUA"><img src="./images/youtube.png" alt="youtube"></a>
+      <a href="https://blog.naver.com/happypoints"><img src="./images/blog.png" alt="blog"></a>
     </div>
     <p class="tel">해피포인트 고객센터
       <a href="tel:080-320-1234">080-320-1234</a><br>
       <span>평일 AM 9시 ~ PM 7시 주말,공휴일 휴무</span>
     </p>
-    <p class="info">섹타나인 사업자 등록번호: 113-86-10017 경기도 성남시 중원구 사기막골로31번길 18(상대원동)</p>
+    <p class="info">섹타나인 사업자 등록번호: 113-86-10017 <br>
+      주소 : 경기도 성남시 중원구 사기막골로31번길 18(상대원동)</p>
     <p class="copy">Copyright ⓒ by SPC ALL RIGHTS RESERVED.</p>
   </footer>
 </body>
