--- a/TeamProject-main/location.html
+++ b/TeamProject-main/location.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>location</title>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/location.js"></script>
 
@@ -24,7 +28,7 @@
         <nav id="gnb">
           <div>
             <button class="btn_close">
-              close
+              <i class="fa fa-times fa-2x"aria-hidden="true"></i>
             </button>
           </div>
           <ul>
