--- a/TeamProject-main/about.html
+++ b/TeamProject-main/about.html
@@ -43,23 +43,44 @@
     </nav>
     <button class="btn_toggle">
       <img src="./images/menu.png">
+      <div>
+        
+      </div>
     </button>
   </header>
 
+  
+  <section id="main_visual">
+    <div class="slider">
+      <img src="./images/info_img@2x.jpg" alt="1">
+
+    </div>
+  </section>
+
+  
+
+
+    
 
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-  </body>
-  </html>
+  
+  <footer id="main_footer">
+    <div class="sns">
+      <a href="#"><img src="./images/facebook.png" alt="facebook"></a>
+      <a href="#"><img src="./images/instagram.png" alt="instagram"></a>
+      <a href="#"><img src="./images/youtube.png" alt="youtube"></a>
+      <a href="#"><img src="./images/blog.png" alt="blog"></a>
+    </div>
+    <p class="tel">해피포인트 고객센터
+      <a href="tel:080-320-1234">080-320-1234</a><br>
+      <span>평일 AM 9시 ~ PM 7시 주말,공휴일 휴무</span>
+    </p>
+    <p class="info">섹타나인 사업자 등록번호: 113-86-10017 경기도 성남시 중원구 사기막골로31번길 18(상대원동)</p>
+    <p class="copy">Copyright ⓒ by SPC ALL RIGHTS RESERVED.</p>
+  </footer>
+</body>
+</html>
