--- a/TeamProject-main/location.html
+++ b/TeamProject-main/location.html
@@ -32,14 +32,13 @@
             </button>
           </div>
           <ul>
-            <li><a href="./subpage.html">해피포인트 소개</a></li>
-            <li><a href="#">제휴</a></li>
-            <li><a href="#">이벤트 / 쿠폰</a></li>
-            <li><a href="#">나눔</a></li>
-            <li><a href="#">마이페이지</a></li>
-            <li><a href="#">고객센터</a></li>
+            <li><a href="./about.html">해피포인트 소개</a></li>
+            <li><a href="./together.html">제휴<p class="cs">(Coming soon)</p></a></li>
+            <li><a href="./cs.html">이벤트 / 쿠폰<p class="cs">(Coming soon)</p></a></li>
+            <li><a href="./cs.html">나눔<p class="cs">(Coming soon)</p></a></li>
+            <li><a href="./cs.html">마이페이지<p class="cs">(Coming soon)</p></a></li>
+            <li><a href="./cs.html">고객센터<p class="cs">(Coming soon)</p></a></li>
             <li><a href="./location.html">오시는길</a></li>
-            <li><a href="./location.html">브랜드 소개</a></li>
           </ul>
         </nav>
         <button class="btn_toggle">
