--- a/TeamProject-main/together.html
+++ b/TeamProject-main/together.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./css/style4.css">
+  <link rel="stylesheet" href="./css/style.css">
   <script src="./js/jquery-3.5.1.min.js"></script>
   <script src="./js/subpage.js"></script>
 </head>
@@ -39,12 +39,21 @@
       </ul>
     </nav>
   </header>
-  <section>
-    <img src="./images/Comingsoon.png" alt="">
-    <div>
-        <h1>COMING SOON</h1>
-    </div>
-  </section>
+
+  <div>
+
+
+
+  </div>
+
+
+
+
+
+
+
+
+
 
 
 
