--- a/TeamProject-main/about.html
+++ b/TeamProject-main/about.html
@@ -70,10 +70,10 @@
   
   <footer id="main_footer">
     <div class="sns">
-      <a href="#"><img src="./images/facebook.png" alt="facebook"></a>
-      <a href="#"><img src="./images/instagram.png" alt="instagram"></a>
-      <a href="#"><img src="./images/youtube.png" alt="youtube"></a>
-      <a href="#"><img src="./images/blog.png" alt="blog"></a>
+      <a href="https://www.facebook.com/happypointcard"><img src="./images/facebook.png" alt="facebook"></a>
+      <a href="https://www.instagram.com/happypoint_official/"><img src="./images/instagram.png" alt="instagram"></a>
+      <a href="https://www.youtube.com/channel/UCjlghdluB8Ke5B7hUjENdUA"><img src="./images/youtube.png" alt="youtube"></a>
+      <a href="https://blog.naver.com/happypoints"><img src="./images/blog.png" alt="blog"></a>
     </div>
     <p class="tel">해피포인트 고객센터
       <a href="tel:080-320-1234">080-320-1234</a><br>
