--- a/TeamProject-main/location.html
+++ b/TeamProject-main/location.html
@@ -18,68 +18,66 @@
 <body>
     
 
-    <header id="main_header">
-        <h1>
-          <a href="./index.html"> 
-            <img src="./images/logo.png" alt="해피포인트">
-          </a>
-        </h1>
+  <header id="main_header">
+    <h1>
+      <a href="./index.html"> 
+        <img src="./images/logo.png" alt="해피포인트">
+      </a>
+    </h1>
         <!-- 메인메뉴 -->
-        <nav id="gnb">
-          <div>
-            <button class="btn_close">
-              <i class="fa fa-times fa-2x"aria-hidden="true"></i>
-            </button>
-          </div>
-          <ul>
-            <li><a href="./about.html">해피포인트 소개</a></li>
-            <li><a href="./together.html">제휴<p class="cs">(Coming soon)</p></a></li>
-            <li><a href="./cs.html">이벤트 / 쿠폰<p class="cs">(Coming soon)</p></a></li>
-            <li><a href="./cs.html">나눔<p class="cs">(Coming soon)</p></a></li>
-            <li><a href="./cs.html">마이페이지<p class="cs">(Coming soon)</p></a></li>
-            <li><a href="./cs.html">고객센터<p class="cs">(Coming soon)</p></a></li>
-            <li><a href="./location.html">오시는길</a></li>
-          </ul>
-        </nav>
-        <button class="btn_toggle">
-          <img src="./images/menu.png">
+    <nav id="gnb">
+      <div>
+        <button class="btn_close">
+          <i class="fa fa-times fa-2x"aria-hidden="true"></i>
         </button>
-      </header>
+      </div>
+      <ul>
+        <li><a href="./about.html">해피포인트 소개</a></li>
+        <li><a href="./together.html">제휴<p class="cs">(Coming soon)</p></a></li>
+        <li><a href="./cs.html">이벤트 / 쿠폰<p class="cs">(Coming soon)</p></a></li>
+        <li><a href="./cs.html">나눔<p class="cs">(Coming soon)</p></a></li>
+        <li><a href="./cs.html">마이페이지<p class="cs">(Coming soon)</p></a></li>
+        <li><a href="./cs.html">고객센터<p class="cs">(Coming soon)</p></a></li>
+        <li><a href="./location.html">오시는길</a></li>
+      </ul>
+    </nav>
+    <button class="btn_toggle">
+      <img src="./images/menu.png">
+    </button>
+  </header>
 
-      <section>
-        <div class="map">
-            <img src="./images/location.jpg" alt="">
-            <div class="mapin">
-                <h2>Map</h2>
-            </div>
+  <section>
+    <div class="map">
+        <img src="./images/location.jpg" alt="">
+        <div class="mapin">
+            <h2>Map</h2>
         </div>
-        <div>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419.55459108442955!2d127.16849158838889!3d37.43581990121073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca8df5fb9ecbf%3A0x96aaada99b4e5e7c!2z6rK96riw64-EIOyEseuCqOyLnCDspJHsm5Dqtawg7IOB64yA7JuQMeuPmSDsgqzquLDrp4nqs6jroZwzMeuyiOq4uCAxOA!5e0!3m2!1sko!2skr!4v1612153197953!5m2!1sko!2skr" width="95%" height="550" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        </div>
-      </section>
+    </div>
+    <div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419.55459108442955!2d127.16849158838889!3d37.43581990121073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca8df5fb9ecbf%3A0x96aaada99b4e5e7c!2z6rK96riw64-EIOyEseuCqOyLnCDspJHsm5Dqtawg7IOB64yA7JuQMeuPmSDsgqzquLDrp4nqs6jroZwzMeuyiOq4uCAxOA!5e0!3m2!1sko!2skr!4v1612153197953!5m2!1sko!2skr" width="95%" height="550" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
+  </section>
 
-      <section class="mt">
-        <h2>여기로</h2>
-        <p>경기도 성남시 중원구 사기막골로31번길 18(상대원동)</p>
-        <p>여기에 메인 하피보인드 건물</p>
-      </section>
-
+  <section class="mt">
+    <h2>정보</h2>
+    <p>경기도 성남시 중원구 사기막골로31번길 18(상대원동)</p>
+    <p>여기에 메인 하피보인드 건물</p>
+    <p class="tel">해피포인트 고객센터
+      <a href="tel:080-320-1234">080-320-1234</a><br>
+      <span>평일 AM 9시 ~ PM 7시 주말,공휴일 휴무</span>
+    </p>
+  </section>
 
 
 
 
   <footer id="main_footer">
     <div class="sns">
-      <a href="#"><img src="./images/facebook.png" alt="facebook"></a>
-      <a href="#"><img src="./images/instagram.png" alt="instagram"></a>
-      <a href="#"><img src="./images/youtube.png" alt="youtube"></a>
-      <a href="#"><img src="./images/blog.png" alt="blog"></a>
+      <a href="https://www.facebook.com/happypointcard"><img src="./images/facebook.png" alt="facebook"></a>
+      <a href="https://www.instagram.com/happypoint_official/"><img src="./images/instagram.png" alt="instagram"></a>
+      <a href="https://www.youtube.com/channel/UCjlghdluB8Ke5B7hUjENdUA"><img src="./images/youtube.png" alt="youtube"></a>
+      <a href="https://blog.naver.com/happypoints"><img src="./images/blog.png" alt="blog"></a>
     </div>
-    <p class="tel">해피포인트 고객센터
-      <a href="tel:080-320-1234">080-320-1234</a><br>
-      <span>평일 AM 9시 ~ PM 7시 주말,공휴일 휴무</span>
-    </p>
-    <p class="info">섹타나인 사업자 등록번호: 113-86-10017 경기도 성남시 중원구 사기막골로31번길 18(상대원동)</p>
     <p class="copy">Copyright ⓒ by SPC ALL RIGHTS RESERVED.</p>
   </footer>
 </body>
