--- a/TeamProject-main/cs.html
+++ b/TeamProject-main/cs.html
@@ -48,6 +48,20 @@
 
 
 
-
+  <footer id="main_footer">
+    <div class="sns">
+      <a href="https://www.facebook.com/happypointcard"><img src="./images/facebook.png" alt="facebook"></a>
+      <a href="https://www.instagram.com/happypoint_official/"><img src="./images/instagram.png" alt="instagram"></a>
+      <a href="https://www.youtube.com/channel/UCjlghdluB8Ke5B7hUjENdUA"><img src="./images/youtube.png" alt="youtube"></a>
+      <a href="https://blog.naver.com/happypoints"><img src="./images/blog.png" alt="blog"></a>
+    </div>
+    <p class="tel">해피포인트 고객센터
+      <a href="tel:080-320-1234">080-320-1234</a><br>
+      <span>평일 AM 9시 ~ PM 7시 주말,공휴일 휴무</span>
+    </p>
+    <p class="info">섹타나인 사업자 등록번호: 113-86-10017 <br>
+      주소 : 경기도 성남시 중원구 사기막골로31번길 18(상대원동)</p>
+    <p class="copy">Copyright ⓒ by SPC ALL RIGHTS RESERVED.</p>
+  </footer>
 </body>
 </html>
