--- a/TeamProject-main/location.html
+++ b/TeamProject-main/location.html
@@ -33,11 +33,11 @@
       </div>
       <ul>
         <li><a href="./about.html">해피포인트 소개</a></li>
-        <li><a href="./together.html">제휴<p class="cs">(Coming soon)</p></a></li>
-        <li><a href="./cs.html">이벤트 / 쿠폰<p class="cs">(Coming soon)</p></a></li>
-        <li><a href="./cs.html">나눔<p class="cs">(Coming soon)</p></a></li>
-        <li><a href="./cs.html">마이페이지<p class="cs">(Coming soon)</p></a></li>
-        <li><a href="./cs.html">고객센터<p class="cs">(Coming soon)</p></a></li>
+        <li><a href="./together.html">제휴</a></li>
+        <li><a href="./cs.html">이벤트 / 쿠폰</a></li>
+        <li><a href="./cs.html">나눔</a></li>
+        <li><a href="./cs.html">마이페이지</a></li>
+        <li><a href="./cs.html">고객센터</a></li>
         <li><a href="./location.html">오시는길</a></li>
       </ul>
     </nav>
@@ -50,24 +50,27 @@
     <div class="map">
         <img src="./images/location.jpg" alt="">
         <div class="mapin">
-            <h2>Map</h2>
+          <table>
+            <div class="information">
+              <tr>
+                <th rowspan="2">정보</th>
+                <th>길</th>
+                <th>전화번호</th>
+                <th>열린시간</th>
+              </tr>
+              <tr>
+                <td>경기도 성남시 중원구 사기막골로31번길 18(상대원동)</td>
+                <td><a class="white" href="tel:080-320-1234">080-320-1234</a></td>
+                <td>평일 AM 9시 ~ PM 7시</td>
+              </tr>
+            </div>
+          </table>
         </div>
     </div>
     <div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419.55459108442955!2d127.16849158838889!3d37.43581990121073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca8df5fb9ecbf%3A0x96aaada99b4e5e7c!2z6rK96riw64-EIOyEseuCqOyLnCDspJHsm5Dqtawg7IOB64yA7JuQMeuPmSDsgqzquLDrp4nqs6jroZwzMeuyiOq4uCAxOA!5e0!3m2!1sko!2skr!4v1612153197953!5m2!1sko!2skr" width="95%" height="550" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419.55459108442955!2d127.16849158838889!3d37.43581990121073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca8df5fb9ecbf%3A0x96aaada99b4e5e7c!2z6rK96riw64-EIOyEseuCqOyLnCDspJHsm5Dqtawg7IOB64yA7JuQMeuPmSDsgqzquLDrp4nqs6jroZwzMeuyiOq4uCAxOA!5e0!3m2!1sko!2skr!4v1612153197953!5m2!1sko!2skr" width="95%" height="550" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="mapfull"></iframe>
     </div>
   </section>
-
-  <section class="mt">
-    <h2>정보</h2>
-    <p>경기도 성남시 중원구 사기막골로31번길 18(상대원동)</p>
-    <p>여기에 메인 하피보인드 건물</p>
-    <p class="tel">해피포인트 고객센터
-      <a href="tel:080-320-1234">080-320-1234</a><br>
-      <span>평일 AM 9시 ~ PM 7시 주말,공휴일 휴무</span>
-    </p>
-  </section>
-
 
 
 
@@ -78,6 +81,12 @@
       <a href="https://www.youtube.com/channel/UCjlghdluB8Ke5B7hUjENdUA"><img src="./images/youtube.png" alt="youtube"></a>
       <a href="https://blog.naver.com/happypoints"><img src="./images/blog.png" alt="blog"></a>
     </div>
+    <p class="tel">해피포인트 고객센터
+      <a href="tel:080-320-1234">080-320-1234</a><br>
+      <span>평일 AM 9시 ~ PM 7시 주말,공휴일 휴무</span>
+    </p>
+    <p class="info">섹타나인 사업자 등록번호: 113-86-10017 <br>
+      주소 : 경기도 성남시 중원구 사기막골로31번길 18(상대원동)</p>
     <p class="copy">Copyright ⓒ by SPC ALL RIGHTS RESERVED.</p>
   </footer>
 </body>
