--- a/TeamProject-main/together.html
+++ b/TeamProject-main/together.html
@@ -30,11 +30,11 @@
       </div>
       <ul>
         <li><a href="./about.html">해피포인트 소개</a></li>
-        <li><a href="./together.html">제휴<p class="cs">(Coming soon)</p></a></li>
-        <li><a href="./cs.html">이벤트 / 쿠폰<p class="cs">(Coming soon)</p></a></li>
-        <li><a href="./cs.html">나눔<p class="cs">(Coming soon)</p></a></li>
-        <li><a href="./cs.html">마이페이지<p class="cs">(Coming soon)</p></a></li>
-        <li><a href="./cs.html">고객센터<p class="cs">(Coming soon)</p></a></li>
+        <li><a href="./together.html">제휴</a></li>
+        <li><a href="./cs.html">이벤트 / 쿠폰</a></li>
+        <li><a href="./cs.html">나눔</a></li>
+        <li><a href="./cs.html">마이페이지</a></li>
+        <li><a href="./cs.html">고객센터</a></li>
         <li><a href="./location.html">오시는길</a></li>
       </ul>
     </nav>
