--- a/TeamProject-main/location.html
+++ b/TeamProject-main/location.html
@@ -50,27 +50,31 @@
     <div class="map">
         <img src="./images/location.jpg" alt="">
         <div class="mapin">
-          <table>
-            <div class="information">
-              <tr>
-                <th rowspan="2">정보</th>
-                <th>길</th>
-                <th>전화번호</th>
-                <th>열린시간</th>
-              </tr>
-              <tr>
-                <td>경기도 성남시 중원구 사기막골로31번길 18(상대원동)</td>
-                <td><a class="white" href="tel:080-320-1234">080-320-1234</a></td>
-                <td>평일 AM 9시 ~ PM 7시</td>
-              </tr>
-            </div>
-          </table>
+          <h2>오시는길</h2>
+          <p>경기도 성남시 중원구 사기막골로31번길 18(상대원동)</p>
         </div>
     </div>
     <div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419.55459108442955!2d127.16849158838889!3d37.43581990121073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca8df5fb9ecbf%3A0x96aaada99b4e5e7c!2z6rK96riw64-EIOyEseuCqOyLnCDspJHsm5Dqtawg7IOB64yA7JuQMeuPmSDsgqzquLDrp4nqs6jroZwzMeuyiOq4uCAxOA!5e0!3m2!1sko!2skr!4v1612153197953!5m2!1sko!2skr" width="95%" height="550" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0" class="mapfull"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419.55459108442955!2d127.16849158838889!3d37.43581990121073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca8df5fb9ecbf%3A0x96aaada99b4e5e7c!2z6rK96riw64-EIOyEseuCqOyLnCDspJHsm5Dqtawg7IOB64yA7JuQMeuPmSDsgqzquLDrp4nqs6jroZwzMeuyiOq4uCAxOA!5e0!3m2!1sko!2skr!4v1612153197953!5m2!1sko!2skr" width="95%" height="550" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
   </section>
+<br><br>
+  <table border="1" class="information">
+    <div class="information">
+      <tr>
+        <th rowspan="2">정보</th>
+        <th>길</th>
+        <th>전화번호</th>
+        <th>열린시간</th>
+      </tr>
+      <tr>
+        <td>경기도 성남시 중원구 사기막골로31번길 18(상대원동)</td>
+        <td><a class="white" href="tel:080-320-1234">080-320-1234</a></td>
+        <td>평일 AM 9시 ~ PM 7시</td>
+      </tr>
+    </div>
+  </table>
+  <br><br>
 
 
 
